# unreal-project-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-03-05-project-intelligence-expansion-design.md  2026-03-05-project-intelligence-expansion-plan.md
src/unreal_project_mcp/: __main__.py  config.py  server.py
src/unreal_project_mcp/db/: queries.py  schema.py
src/unreal_project_mcp/indexer/: build_cs_parser.py  config_parser.py  cpp_parser.py  pattern_tagger.py  pipeline.py  plugin_parser.py  reference_builder.py  tag_scanner.py
tests/: test_build_cs_parser.py  test_config.py  test_config_parser.py  test_cpp_parser.py  test_db.py  test_e2e.py  test_pattern_tagger.py  test_pipeline.py  test_plugin_parser.py  test_server.py  test_tag_scanner.py
tests/fixtures/sample_build_cs/: MyGame.Build.cs
tests/fixtures/sample_config/: DefaultEngine.ini  DefaultGame.ini
tests/fixtures/sample_plugins/: MyPlugin.uplugin
tests/fixtures/sample_project_source/: AssetLoader.cpp  AssetLoader.h  MeshDamageStamper.cpp  MeshDamageStamper.h  ReplicatedActor.h
