[project]
name = "unreal-project-mcp"
version = "0.1.0"
description = "Project-level C++ source intelligence for Unreal Engine AI development via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
]

[project.scripts]
unreal-project-mcp = "unreal_project_mcp.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unreal_project_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
